performance page Alignment fixed

--- a/src/assets/scss/custom/pages/_performance.scss
+++ b/src/assets/scss/custom/pages/_performance.scss
@@ -112,9 +112,9 @@ only screen and (-o-min-device-pixel-ratio: 1.25/1) and (min-width: 1281px),
 only screen and (min-device-pixel-ratio: 1.25) and (min-width: 1281px),
 only screen and (min-resolution: 200dpi) and (min-width: 1281px),
 only screen and (min-resolution: 1.25dppx) and (min-width: 1281px) {
-    .performance-game-points-coin {
-        margin-left: 30%;
-    }
+    // .performance-game-points-coin {
+    //     margin-left: 20%;
+    // }
 }
 
 /* 
